syntax = "proto3";

package master_pb;

service masterService {
	rpc StreamSendFile(stream File) returns (stream File){}
}

message Empty{
	
}

message File{
	string Key = 1;
	string Action = 2;
	uint32 ErrorCode = 3;
	string Node = 4;
	uint32 Size = 5;
	uint32 Created = 6;
	bytes Meta = 7;
	bytes Data = 8;
}